--- a/FormsExperiment/Properties/Resources.resx
+++ b/FormsExperiment/Properties/Resources.resx
@@ -127,7 +127,7 @@
   <data name="balloon2" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\balloon2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
-  <data name="baloon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
+  <data name="balloon1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\baloon1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="bomb" type="System.Resources.ResXFileRef, System.Windows.Forms">
